envoy-gateway/extra/httproute-unifi-noa-re.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi-noa-re
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - name: unifi-noa-re
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames:
    - unifi.noa.re
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: unifi-noa-re
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
